@@ -87,7 +87,13 @@ def MakeHostsFile(options, cli_common_lib_instance):
                    '# To remove a host, comment it out, to add a host,\n'
                    '# uncomment the desired ip address and specify a\n'
                    '# hostname. To change a hostname, edit the hostname\n'
-                   '# next to the desired ip address.\n%s' % (
+                   '# next to the desired ip address.\n'
+                   '#\n'
+                   '# The "@" symbol in the host column signifies inheritance\n'
+                   '# of the origin of the zone, this is just shorthand.\n'
+                   '#\n'
+                   '# Columns are arranged as so:\n'
+                   '# Ip_Address Fully_Qualified_Domain Hostname\n%s' % (
                        options.range, view_dependency,
                        cli_common_lib_instance.PrintHosts(
                            records_dict, ip_address_list, zones_info,
