@@ -175,6 +175,12 @@ class TestDnsMkHost(unittest.TestCase):
         '# uncomment the desired ip address and specify a\n'
         '# hostname. To change a hostname, edit the hostname\n'
         '# next to the desired ip address.\n'
+        '#\n'
+        '# The "@" symbol in the host column signifies inheritance\n'
+        '# of the origin of the zone, this is just shorthand.\n'
+        '#\n'
+        '# Columns are arranged as so:\n'
+        '# Ip_Address Fully_Qualified_Domain Hostname\n'
         '#192.168.1.4 host2.university.edu       # No forward assignment\n'
         '192.168.1.5  host3.university.edu host3 # No reverse assignment\n'
         '#192.168.1.6\n'
@@ -226,6 +232,12 @@ class TestDnsMkHost(unittest.TestCase):
         '# uncomment the desired ip address and specify a\n'
         '# hostname. To change a hostname, edit the hostname\n'
         '# next to the desired ip address.\n'
+        '#\n'
+        '# The "@" symbol in the host column signifies inheritance\n'
+        '# of the origin of the zone, this is just shorthand.\n'
+        '#\n'
+        '# Columns are arranged as so:\n'
+        '# Ip_Address Fully_Qualified_Domain Hostname\n'
         '#192.168.1.4 host7.university.edu       # No forward assignment\n'
         '#192.168.1.5  host3.university.edu host3 # No reverse assignment\n'
         '192.168.1.6 host5.university.edu host5\n'
@@ -282,6 +294,12 @@ class TestDnsMkHost(unittest.TestCase):
         '# uncomment the desired ip address and specify a\n'
         '# hostname. To change a hostname, edit the hostname\n'
         '# next to the desired ip address.\n'
+        '#\n'
+        '# The "@" symbol in the host column signifies inheritance\n'
+        '# of the origin of the zone, this is just shorthand.\n'
+        '#\n'
+        '# Columns are arranged as so:\n'
+        '# Ip_Address Fully_Qualified_Domain Hostname\n'
         '#192.168.1.4 host2.university.edu       # No forward assignment\n'
         '#192.168.1.5\n'
         '192.168.1.6  host5.university.edu host5\n'
